--- a/Aula10/A10Ex2/src/view/Janela.form
+++ b/Aula10/A10Ex2/src/view/Janela.form
@@ -32,11 +32,11 @@
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="entradaN2" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="resultado" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="entradaN1" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="entradaN1" pref="104" max="32767" attributes="0"/>
+                          <Component id="entradaN2" alignment="1" max="32767" attributes="0"/>
+                          <Component id="resultado" alignment="1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -90,6 +90,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Soma"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoSomaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
